--- a/MyWebApp/my-otpmanager-service/src/main/resources/application.properties
+++ b/MyWebApp/my-otpmanager-service/src/main/resources/application.properties
@@ -15,4 +15,18 @@ spring.main.allow-bean-definition-overriding=true
 otp-generator-maxvalidation=5
 otp-generator-expirytime=1200
 
+pring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username={gmailID}
+spring.mail.password={app_password}
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
