Removed Garbage Info

--- a/MyWebApp/my-authentication-service/src/main/resources/application.properties
+++ b/MyWebApp/my-authentication-service/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=9997
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/otp_generate
-spring.datasource.username=m1047227
-spring.datasource.password=Cristiano77
+spring.datasource.username={your_username}
+spring.datasource.password={your_password}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
