--- a/MyWebApp/my-otpmanager-service/src/main/resources/application.properties
+++ b/MyWebApp/my-otpmanager-service/src/main/resources/application.properties
@@ -2,31 +2,17 @@ server.port=9999
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/otp_generate
-spring.datasource.username=m1047227
-spring.datasource.password=Cristiano77
+spring.datasource.username={your_username}
+spring.datasource.password={your_password}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.main.allow-bean-definition-overriding=true
+spring.datasource.initialization-mode=always
+io.login.baseUri=http://localhost:9999/getOtp/validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
 otp-generator-maxvalidation=5
 otp-generator-expirytime=1200
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=tabish.khansfc@gmail.com
-spring.mail.password=nnrpbmtqzbbeeofj
-
-# Other properties
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
-# TLS , port 587
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-# SSL, post 465
-#spring.mail.properties.mail.smtp.socketFactory.port = 465
-#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
